<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.botondepanico.ui.Boton_de_panico.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.botondepanico.ui.Incidents_sos.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_status"
        android:name="com.example.botondepanico.ui.send_incidents.StatusFragment"
        android:label="@string/menu_status"
        tools:layout="@layout/fragment_status" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.botondepanico.ui.Notificactions.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_edit_information"
        android:name="com.example.botondepanico.ui.Edit_Information.Edit_information"
        android:label="@string/menu_edit_information"
        tools:layout="@layout/fragment_edit_information" />
    <fragment
        android:id="@+id/nav_view_status"
        android:name="com.example.botondepanico.ui.StatusComplaint.Complaints"
        android:label="@string/menu_view_status"
        tools:layout="@layout/fragment_complaints" />


</navigation>